--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,36 @@ section {
 .sun {
 	width: 300px;
 }
+
+.sun-section {
+	background: transparent url("../img/mars-pano.jpg") no-repeat center top;
+	background-size: cover;
+}
+
+.dipper {
+	width: 300px;
+	opacity: 0;
+}
+
+.js-dipper-fade {
+	-webkit-animation: dipper-fade 1s linear forwards;
+}
+
+.shuttle-section {
+	background-color: #E99F25;
+}
+
+.shuttle {
+	width: 200px;
+	opacity: 0;
+}
+
+@-webkit-keyframes dipper-fade {
+	0% {
+		opacity: 0;
+	}
+	
+	100% {
+		opacity: 1;
+	}
+}
