--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,38 @@ section {
 }
 
 .shuttle-section {
-	background-color: #E99F25;
+	background-color: #f6a500;
 }
 
 .shuttle {
 	width: 200px;
 	opacity: 0;
+}
+
+.js-shuttle-fade-up {
+	-webkit-animation: shuttle-fade-up 1s linear forwards;
+}
+
+.ships-section {
+	background: transparent url("../img/kasei-valles-canyons.jpg") no-repeat center top;
+	background-size: cover;
+	text-align: center;
+}
+
+.ship-1,
+.ship-2,
+.ship-3,
+.ship-4 {
+	width: 175px;
+	display: inline-block;
+}
+
+.js-ships-1-3 {
+	-webkit-animation: ships-1-3 1s linear forwards;	
+}
+
+.js-ships-2-4 {
+	-webkit-animation: ships-2-4 1s linear forwards;	
 }
 
 @-webkit-keyframes dipper-fade {
@@ -50,3 +76,40 @@ section {
 		opacity: 1;
 	}
 }
+
+@-webkit-keyframes shuttle-fade-up {
+	0% {
+		opacity: 0;
+		transform: translateY(100px)
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translateY(0px)
+	}
+}
+
+@-webkit-keyframes ships-1-3 {
+	0% {
+		opacity: 0;
+		transform: translateY(100px)
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translateY(0px)
+	}
+}
+
+@-webkit-keyframes ships-2-4 {
+	0% {
+		opacity: 0;
+		transform: translateY(100px)
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translateY(0px)
+	}
+}
+
